implement main application